# DIP_course_final_project

./: .gitignore  README.md  card_guided_diffusion_colab.ipynb  main.py  presentation.tex  presentation.vrb  pyproject.toml  report.aux  report.out  report.tex  report.toc
card/: images.py  metrics.py  noise.py  pipeline.py  restoration.py  types.py
card.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_noise.py  test_pipeline.py
